correct landing header and subheader alignment issues

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -139,20 +139,22 @@ a {
   -moz-box-shadow: inset 0 4px 13px -8px black;
 }
 
-.landing-header {
+.banner-blurb-aligner {
   position: absolute;
-  left: 97px;
   bottom: 225px;
+  width: 90%;
+}
+
+.landing-header {
   font-size: 2.8rem;
   font-weight: 700;
+  margin: 0;
 }
 
 .landing-subheader {
-  position: absolute;
-  left: 97px;
-  bottom: 185px;
   width: 700px;
   font-size: 1.5rem;
+  margin: 0;
 }
 
 .services-section-flex {
@@ -368,6 +370,12 @@ a {
     -webkit-box-shadow: inset 0 3px 4px -2px black;
     -moz-box-shadow: inset 0 4px 13px -8px black;
   }
+
+  .banner-blurb-aligner {
+    position: absolute;
+    bottom: 205px;
+    width: 90%;
+  }
 }
 
 @media (max-width: 908px) {
@@ -499,25 +507,21 @@ a {
     -moz-box-shadow: inset 0 4px 13px -8px black;
   }
 
-  .landing-header {
+  .banner-blurb-aligner {
     position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 215px;
+    bottom: 225px;
+    width: 90%;
+  }
+
+  .landing-header {
     width: 400px;
-    margin: 0 auto;
-    font-size: 1.9rem;
+    font-size: 2.2rem;
     font-weight: 700;
   }
 
   .landing-subheader {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 169px;
-    width: 400px;
-    margin: 0 auto;
-    font-size: 1.1rem;
+    width: 600px;
+    font-size: 1.3rem;
   }
 
   .services-section-flex {
@@ -616,32 +620,29 @@ a {
     width: auto;
   }
 
-  .landing-header {
+  .banner-blurb-aligner {
     position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 235px;
-    text-align: center;
+    bottom: 225px;
+    width: 100%;
+  }
 
-    width: 90%;
-    min-width: 300px;
-    max-width: 400px;
-    margin: 0 auto;
+  .landing-header {
+    text-align: center;
     font-size: 1.8rem;
     font-weight: 700;
+    width: 70%;
+    min-width: 230px;
+    max-width: 400px;
+    margin: 0 auto 20px auto;
   }
 
   .landing-subheader {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 169px;
     text-align: center;
-
-    width: 87%;
-    min-width: 300px;
-    max-width: 400px;
     font-size: 1rem;
+    width: 87%;
+    min-width: 250px;
+    max-width: 400px;
+    margin: 0 auto;
   }
 
   .footer-content-flex {
